# rust-jack

./: .gitignore  .travis.yml  CHANGELOG  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  README.org  build.rs  dummy_jack_server.sh  ffi_completeness.md  jack_test_daemon.sh  rustfmt.toml
.config/: nextest.toml
.github/: FUNDING.yml
.github/workflows/: linting.yml  rust.yml  site.yml  testing.yml
docs/: Gemfile  _config.yml  book.toml  features.md  logging.md  quickstart.md
docs/contrib/: closure_callbacks.md  index.md
docs/src/: SUMMARY.md  features.md  logging.md  quickstart.md
docs/src/contrib/: closure_callbacks.md  controller.md  index.md
example/: Cargo.toml
example/src/: main.rs
examples/: controlled_sine.rs  internal_client.rs  playback_capture.rs  set_transport.rs  show_midi.rs  show_transport.rs  sine.rs  sine.rs.bk
jack-sys/: Cargo.toml  LICENSE-MIT  README.md  build.rs
jack-sys/functions-gen/: Cargo.toml
jack-sys/functions-gen/src/: main.rs
jack-sys/src/: consts.rs  functions.rs  lib.rs  types.rs
jack-sys/src/functions/: dynamic_linking.rs  dynamic_loading.rs  mod.rs
src/: .#utils.rs  callbacks.rs  client.rs  enums.rs  flags.rs  info.rs  jack_enums.rs  jack_flags.rs  jack_port.rs  jack_port_impls.rs  jack_utils.rs  lib.rs  logging.rs  logging.rs.bk  midi.rs  midi_impls.rs  port.rs  port_impls.rs  primitive_types.rs  properties.rs  ringbuffer.rs  test.rs  transport.rs  utils.rs
src/client/: active.rs  async_client.rs  async_client.rs.bk  base.rs  callbacks.rs  client.rs  client_impl.rs  client_impls.rs  client_options.rs  client_status.rs  common.rs  handler_impls.rs  mod.rs  test.rs  test_callback.rs
src/client/client/: base.rs  callbacks.rs  mod.rs
src/contrib/: closure.rs  controller.rs
src/jack_flags/: client_options.rs  client_status.rs  mod.rs  port_flags.rs
src/port/: audio.rs  audio.rs.bk  midi.rs  midi.rs.bk  mod.rs  mod.rs.bk  port.rs  port.rs.bk  port_flags.rs  port_impl.rs  test_client.rs  test_port.rs
src/port_impls/: audio.rs  midi.rs  mod.rs
src/ringbuffer/: mod.rs  mod.rs.bk
src/test/: client.rs  mod.rs  test_client.rs  test_client_cback.rs  test_client_port.rs  test_client_port.rs.bk  test_consts.rs  test_logging.rs  test_port.rs  test_port_audio.rs  test_port_connect.rs  test_port_midi.rs  test_ringbuffer.rs  test_time.rs
src/tests/: client.rs  log.rs  mod.rs  processing.rs  ringbuffer.rs  time.rs  transport.rs
