[package]
authors = ["Will S. Medrano <will.s.medrano@gmail.com>"]
description = "Real time audio and midi with JACK."
documentation = "https://docs.rs/jack"
edition = "2018"
keywords = ["jack", "realtime", "audio", "midi", "music"]
license = "MIT"
name = "jack"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-jack"
version = "0.9.0"

[dependencies]
bitflags = "1"
dlib = "0.5"
jack-sys = {path = "./jack-sys"}
lazy_static = "1.4"
libc = "0.2"
log = "0.4"

[dev-dependencies]
crossbeam-channel = "0.5"

[features]
default = ["dlopen"]
dlopen = ["jack-sys/dlopen"]
metadata = []
