[package]
authors = ["Will S. Medrano <will.s.medrano@gmail.com>"]
description = "Real time audio and midi with JACK."
documentation = "https://docs.rs/jack"
edition = "2018"
keywords = ["jack", "realtime", "audio", "midi", "music"]
license = "MIT"
name = "jack"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-jack"
version = "0.12.1"

[dependencies]
bitflags = "2"
jack-sys = {version = "0.5", path = "./jack-sys"}
lazy_static = "1.4"
libc = "0.2"
log = "0.4"

[dev-dependencies]
crossbeam-channel = "0.5"

[features]
default = ["dynamic_loading"]
metadata = []
dynamic_loading = ["jack-sys/dynamic_loading"]