[package]
authors = ["Will S. Medrano <will.s.medrano@gmail.com>"]
description = "Real time audio and midi with JACK."
documentation = "https://docs.rs/jack"
edition = "2018"
keywords = ["jack", "realtime", "audio", "midi", "music"]
license = "MIT"
name = "jack"
readme = "README.md"
repository = "https://github.com/RustAudio/rust-jack"
version = "0.13.5"

[dependencies]
bitflags = "2"
jack-sys = {version = "0.5", path = "./jack-sys"}
lazy_static = "1.4"
libc = "0.2"
log = { version = "0.4", optional = true}
rtrb = { version = "0.3.2", optional = true }

[dev-dependencies]
approx = "0.5"
crossbeam-channel = "0.5"
ctor = "0.2"

[features]
default = ["dynamic_loading", "log"]
dynamic_loading = ["jack-sys/dynamic_loading"]
controller = ["rtrb"]

[[example]]
name = "controlled_sine"
required-features = ["controller"]
