[package]
authors = ["Patrick Reisert"]
description = "Low-level binding to the JACK audio API."
edition = "2018"
license = "MIT OR Apache-2.0"
links = "jack"
name = "jack-sys"
repository = "https://github.com/RustAudio/rust-jack/tree/main/jack-sys"
version = "0.3.2"

[dependencies]
dlib = "0.5"
dlopen = {version = "0.1", optional = true}
lazy_static = "1.4"
libc = "0.2"
libloading = "0.7"

[build-dependencies]
pkg-config = "0.3"

[features]
# If dlopen is set, then dlib must be used to call jack-sys functions.  See
# https://github.com/vberger/dlib.
default = []
